# arr

./: .gitignore  .gitmodules  CMakeLists.txt  arr.hpp  queries.txt
arr.xcodeproj/project.xcworkspace/xcuserdata/phil3.xcuserdatad/: UserInterfaceState.xcuserstate
core/: arr1.hpp  arr1.tem  arr2.hpp  arr2.tem  arr2slice.hpp  arr2slice.tem  arr2sub.tem  arr3.hpp  arr3.tem
examples/: CMakeLists.txt  examples.cpp
headers/: CMakeLists.txt  arr1.hpp  arr1.tem  arr2.hpp  arr2.tem  arr2slice.hpp  arr2slice.tem  arr2sub.hpp  arr3.hpp  bool1.hpp  bool2.hpp  bool2slice.hpp  bool2sub.hpp  bool3.hpp  bool_type.hpp  cpx2.hpp  dbl1.hpp  dbl2.hpp  dbl2slice.hpp  dbl2sub.hpp  uint1.hpp  uint2.hpp
sources/: CMakeLists.txt  arr2.tem  bool1.cpp  bool2.cpp  bool2slice.cpp  bool2sub.cpp  bool3.cpp  cpx1.cpp  dbl1.cpp  dbl2.cpp  dbl2slice.cpp  dbl2sub.cpp  uint1.cpp  uint2.cpp
src/headers/: arr1.hpp  arr2.hpp  barr1.hpp
src/sources/: arr1.tem  arr2.tem  barr2.cpp
test/: CMakeLists.txt  arrTest.cpp  arr_tests.cpp
